add extracteur