@@ -22,7 +22,3 @@ public class Main extends Application {
         launch(args);
     }
 }
-
-        /*--module-path
-        "/home/sadou/Vidéos/javafx-sdk-11.0.2/lib/"
-        --add-modules=javafx.controls,javafx.fxml*/
